app/component/itinerary/itinerary.scss
/* ... */
@mixin platformUpdated {
  display: inline-flex;
  height: 18px;
  min-width: auto;
  justify-content: center;
  align-items: center;
  gap: var(--space-xxs);
  border-radius: var(--radius-s);
  background: #fdf3f6;
  color: $cancelation-red;
  padding: 0 8px 0 4px;
}

.default-dotted-line {
  background-image: $default-dotted-line;
}

.indoor-dotted-line {
  background-image: $indoor-dotted-line;
}

.indoor-dotted-line-horizontal {
  background-image: $indoor-dotted-line-horizontal;
}

.itinerary-list-container {
  padding-bottom: 16px;
}

.itinerary-tabs__scroll {
  background: $white;
  padding: 0 50px;
  position: relative;
}

.itinerary-main {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  transform: scale(1); // start a new z-index context here
  position: relative;
  top: 5px;

  .disclaimer-container {
    background-color: $disclaimer-background-color;
    font-weight: $font-weight-book;
    border: 1px solid $disclaimer-border-color;
    border-radius: $border-radius-disclaimer;
    display: flex;
    font-size: $font-size-xsmall;
    padding: $padding-medium;
    white-space: normal;

    &.unknown-fare-disclaimer__leg {
      @include font-book;

      color: $gray;
      flex-direction: column;
      margin-bottom: $padding-large;
      margin-top: $padding-medium;

      .accent {
        @include font-medium;

        color: $black;
      }

      .ticket-info {
        margin-top: $padding-medium;

        .agency-link {
          color: $theme-primary-color;
          display: block;
          margin-top: $padding-medium;

          a {
            color: $theme-primary-color;
          }
        }
      }
    }

    &.unknown-fare-disclaimer__top {
      @include font-medium;

      margin-bottom: 5px;
      margin-top: 9px;

      .icon-container {
        flex: 0;
        font-size: 20px;

        .icon {
          color: $theme-primary-color;
          width: 1em;
          height: 1em;
        }
      }

      .description-container {
        flex: 1;
        margin-left: $padding-medium;
      }
    }
  }

  .route-disclaimer-container {
    background-color: $disclaimer-background-color;
    font-weight: $font-weight-book;
    border: 1px solid $disclaimer-border-color;
    border-radius: $border-radius-disclaimer;
    display: flex;
    font-size: $font-size-xsmall;
    padding: var(--space-s) $padding-medium;
    white-space: normal;
    margin-bottom: 5px;
    margin-top: 9px;

    .icon-container {
      flex: 0;
      font-size: 20px;

      .icon {
        &.info {
          color: $theme-primary-color;
          width: 1em;
          height: 1em;
        }
      }
    }

    .disclaimer {
      display: flex;
      flex-direction: column;
      margin-left: 0.7em;

      .disclaimer-header {
        display: flex;
        font-size: $font-size-normal;
        font-weight: $font-weight-medium;
        line-height: 22px;
        margin: 0 0 4px;
        color: #333;
      }

      .disclaimer-content {
        display: flex;
        font-size: $font-size-normal;
        margin-bottom: 8px;
        color: #666;
        line-height: 18px;
        letter-spacing: -0.03em;
      }

      .external-link {
        color: $link-color;
        text-decoration: none;
        font-weight: $font-weight-medium;

        .icon-container {
          padding-left: var(--space-xxs);

          .icon {
            width: 16px;
            height: 16px;
            vertical-align: middle;
          }
        }
      }
    }
  }

  div.itinerary-ticket-information,
  .itinerary-co2-information {
    flex-grow: 0;
    flex-shrink: 0;
  }

  .itinerary-leg-container {
    .zone-dual {
      min-height: 4em;
    }

    .zone-triple {
      min-height: 6em;
    }

    .zone-dual,
    .zone-triple {
      .itinerary-time-column {
        .time-column-zone-icons-container {
          &.intermediate-leg {
            top: -12px;

            .zone-icon-container {
              .circle {
                margin-bottom: 6px;
              }
            }

            .zone-icon-container.zone-delimiter {
              top: -4px;

              .circle {
                margin-top: 4px;
              }
            }
          }
        }
      }
    }

    .zone-previous {
      .leg-before-circle {
        bottom: 0;
      }

      .leg-before-line {
        height: 120%;
        top: 0;
      }

      .itinerary-instruction-column {
        display: flex;
        flex-direction: column;
        justify-content: flex-end;

        > div {
          flex-grow: 0;
        }
      }
    }
  }
}

.itinerary-co2-information {
  &.mobile {
    padding-left: 5px;

    .divider-bottom {
      width: 365px;
    }
  }
}
/* ... */

